# test_4_project

./: .env.example  .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  task_statuses.json  tasklabels.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/labels/: index.html
task_manager/templates/layouts/: application.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: detail.html  filter.html  index.html
task_manager/templates/users/: index.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
